--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1629,3 +1629,13 @@ databaseChangeLog:
         - sql:
             sql: UPDATE user_compensations set wage_cents = wage_cents * 100 WHERE wage_cents is NOT NULL;
 
+#  Compensation is now required, and the need to return to the front-end in the back-end needs to be
+#  converted from cents to US dollars, so the old data is empty and set to 0
+  - changeSet:
+      id: 1593565753858-2
+      author: bin-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: UPDATE user_compensations set wage_cents = 0 WHERE wage_cents is NULL;
