--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1629,8 +1629,8 @@ databaseChangeLog:
         - sql:
             sql: UPDATE user_compensations set wage_cents = wage_cents * 100 WHERE wage_cents is NOT NULL;
 
-#  Compensation is now required, and the need to return to the front-end in the back-end needs to be
-#  converted from cents to US dollars, so the old data is empty and set to 0
+  #  Compensation is now required, and the need to return to the front-end in the back-end needs to be
+  #  converted from cents to US dollars, so the old data is empty and set to 0
   - changeSet:
       id: 1593565753858-2
       author: bin-eb
@@ -1639,3 +1639,11 @@ databaseChangeLog:
       changes:
         - sql:
             sql: UPDATE user_compensations set wage_cents = 0 WHERE wage_cents is NULL;
+
+  - changeSet:
+      id: 1594015822000-1
+      author: michael-eb
+      changes:
+        - sql:
+            sql: create trigger ins_time_period before insert on time_period for each row set new.id = unhex(replace(uuid(), '-', ''));
+
