Bugfix/sh 2509 attendance time period (#1013)
* 2509: attendance time period

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1662,3 +1662,10 @@ databaseChangeLog:
         - dropColumn:
             columnName: timesheet_id
             tableName: employee_time_entries
+
+  - changeSet:
+      id: 1593658305099-1
+      author: qian-eb
+      changes:
+        - sql:
+            sql: drop trigger ins_time_period;
