Bugfix/sh 2620 add schedule task to change the timesheet status (#1020)
Bugfix/sh 2620 add schedule task to change the timesheet status (#1020)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1669,3 +1669,13 @@ databaseChangeLog:
       changes:
         - sql:
             sql: drop trigger ins_time_period;
+
+  - changeSet:
+      id: 1593658305099-2
+      author: qian-eb
+      runOnChange: true
+      changes:
+        - addUniqueConstraint:
+            columnNames: ref_id, name
+            constraintName: uq_static_timesheet_status
+            tableName: static_timesheet_status
