--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1664,6 +1664,20 @@ databaseChangeLog:
             tableName: employee_time_entries
 
   - changeSet:
+      id: 1593658305099-3
+      author: qian-eb
+      changes:
+        - sql:
+            sql: alter table static_timesheet_status modify ref_id binary(16);
+
+  - changeSet:
+      id: 1593658305099-4
+      author: qian-eb
+      changes:
+        - sql:
+            sql: alter table static_timesheet_status modify name varchar(60);
+
+  - changeSet:
       id: 1593658305099-1
       author: qian-eb
       changes:
