--- a/config/application.yml
+++ b/config/application.yml
@@ -16,10 +16,13 @@ spring:
           time_zone: UTC
     show-sql: false
   liquibase:
-    enabled: true
-    change-log: classpath:/db/changelog/db.changelog-master.yml
-  secret:
-    liquibase:
+    company:
+      enabled: true
+      change-log: classpath:/db/changelog/db.default.changelog-master.yml
+    tenant:
+      enabled: true
+      change-log: classpath:/db/changelog/db.tenant.changelog-master.yml
+    secret:
       enabled: true
       change-log: classpath:/db/changelog/db.secret.changelog-master.yml
   thymeleaf:
