--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1704,3 +1704,21 @@ databaseChangeLog:
                   name: start_of_week
                   type: VARCHAR(10)
             tableName: company_ta_settings
+
+  - changeSet:
+      id: 1595324122903
+      author: lei-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: messaging_on
+                  type: tinyint(1)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: overtime_alert
+                  type: INTEGER
+                  constraints:
+                    nullable: false
+            tableName: company_ta_settings
