2735: Delete company field in related entities of user module, resolve building errors, delete some unused tests (#1066)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1.yml
@@ -4635,3 +4635,10 @@ databaseChangeLog:
             referencedTableName: user_statuses
             validate: true
 
+  - changeSet:
+      id: 1594781353402-254
+      author: whb (generated)
+      changes:
+        - dropColumn:
+            columnName: company_id
+            tableName: jobs_users
