--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -546,24 +546,24 @@ databaseChangeLog:
 
   - changeSet:
       id: 1594606148716-26
-      author: michael-eb
+      author: haibo-eb
       changes:
         - sql:
-            sql: drop trigger ins_benefit_coverages;
+            sql: drop trigger if exists ins_benefit_coverages;
 
   - changeSet:
       id: 1594606148716-27
       author: haibo-eb
       changes:
         - sql:
-            sql: drop trigger ins_paid_holidays
+            sql: drop trigger if exists ins_paid_holidays
 
   - changeSet:
       id: 1594606148716-28
       author: haibo-eb
       changes:
         - sql:
-            sql: drop trigger ins_time_period;
+            sql: drop trigger if exists ins_time_period;
 
   - changeSet:
       id: 1594015822000-1
@@ -607,7 +607,7 @@ databaseChangeLog:
       author: qian-eb
       changes:
         - sql:
-            sql: drop trigger ins_time_period;
+            sql: drop trigger if exists ins_time_period;
 
   - changeSet:
       id: 1593658305099-2
