2717: emails from user name instead of no reply (#1063)
2717: emails from user name instead of no reply (#1063)

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -31,6 +31,8 @@ application:
   systemEmailAddress: no-reply@interviewed-qa.com
   frontEndAddress: http://localhost:3000/
   helpUrl: http://localhost:3000/
+  systemEmailFirstName: SimplyHired
+  systemEmailLastName: local
 
 cloud:
   aws:
