2831: add company to time period table (#1104)
* add company to time period table

* add company to time period table

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1723,3 +1723,14 @@ databaseChangeLog:
                     nullable: false
             tableName: company_ta_settings
 
+  - changeSet:
+      id: 1596093490000
+      author: michael-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: company_id
+                  type: binary(16)
+            tableName: time_period
+
