2632: Calculate time zone by postal code autolly (#1100)
* Convert pay frequency type.

* Initialize company and employee settings for attendance.

* Switched to PostalCode formulation

* Initialize company and employee settings for attendance.

* merge origin master branch.

* update tests.

* add unit tests.

* merge origin master branch.

* update tests.

Co-authored-by: Michael <mshumaker@indeed.com>

--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,12 @@
       <artifactId>guava</artifactId>
       <version>29.0-jre</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.maps</groupId>
+      <artifactId>google-maps-services</artifactId>
+      <version>0.14.0</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
