--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -33,6 +33,8 @@ application:
   helpUrl: http://localhost:3000/
   systemEmailFirstName: SimplyHired
   systemEmailLastName: local
+  googleGeoCodingApiKey: #{The key for google geo coding api}
+  googleMapApiKey: #{The key for google map api}
 
 cloud:
   aws:
