2786: Add Column update_at To time_off_adjustments (#1114)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1734,3 +1734,14 @@ databaseChangeLog:
                   type: binary(16)
             tableName: time_period
 
+  - changeSet:
+      id: 1596442248317
+      author: jiansheng-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: update_at
+                  type: datetime
+            tableName: time_off_adjustments
+
