--- a/config/application.yml
+++ b/config/application.yml
@@ -16,7 +16,7 @@ spring:
           time_zone: UTC
     show-sql: false
   liquibase:
-    company:
+    default:
       enabled: true
       change-log: classpath:/db/changelog/db.default.changelog-master.yml
     tenant:
