2812: Resolve building error after rebasing (#1122)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-2.yml
@@ -647,3 +647,14 @@ databaseChangeLog:
                   constraints:
                     nullable: false
             tableName: company_ta_settings
+
+  - changeSet:
+      id: 1596442248317
+      author: jiansheng-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: update_at
+                  type: datetime
+            tableName: time_off_adjustments
