3131: move time period information to new table (#1159)
* Move Time Period Information to a New Table

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-7.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-7.yml
@@ -60,6 +60,16 @@ databaseChangeLog:
   - changeSet:
       id: 1598321529000-4
       author: michael-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - dropForeignKeyConstraint:
+            baseTableName: company_ta_settings
+            constraintName: fk_company_ta_settings_pay_frequency_type_id
+
+  - changeSet:
+      id: 1598321529000-5
+      author: michael-eb
       changes:
         - dropColumn:
             columnName: pay_frequency_type_id
