--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1745,3 +1745,46 @@ databaseChangeLog:
                   type: datetime
             tableName: time_off_adjustments
 
+  - changeSet:
+      id: 1598322679998-1
+      author: lei-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: time_zone_id
+                  type: binary(16)
+            tableName: users
+        - addForeignKeyConstraint:
+            baseColumnNames: time_zone_id
+            baseTableName: users
+            constraintName: fk_users_time_zone_id
+            onDelete: SET NULL
+            onUpdate: RESTRICT
+            referencedColumnNames: id
+            referencedTableName: static_timezones
+
+  - changeSet:
+      id: 1598322679998-2
+      author: lei-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: UPDATE users set time_zone_id = (select time_zone_id from employees_ta_settings where users.id = employees_ta_settings.employee_id)
+
+  - changeSet:
+      id: 1594200120000-3
+      author: lei-eb
+      changes:
+        - dropForeignKeyConstraint:
+            baseTableName: employees_ta_settings
+            constraintName: fk_employees_ta_settings_time_zone_id
+
+  - changeSet:
+      id: 1598322679998-4
+      author: lei-eb
+      changes:
+        - dropColumn:
+            columnName: time_zone_id
+            tableName: employees_ta_settings
