2597: create limit for employee inviting (#1147)
* add a new interceptor

* add locked_at field for user entity, add some relevant method for userService

* improve logic, just consume a token when a request incoming, if this request consumed a token and get a successful response, then check bucket, if get failed, then give back a token to the bucket and unlock currentUser

* improve intercepting logic, just intercept request with post

* fix bug

* add redisson to cache buckets, add dayBuckets

* code refactor, add buckethelper

* code refactor, fix bug

* add application, move interceptor to employee package

* improve changelog

* move comment

* improve method name

* improve field name and method name

* rename bucketHelper to bucketManager

* improve with review

* add exception handle

* add UserInvitationRateLimitingInterceptorTest

* rename some fields and methods

* review

* fix tests

* add a controller method
improve a method anem

* delete dumplicate class

* change some text
add a new exception and error_mapping to show the message to the front-end

* resolve conflicts

* fix a unit test

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-6.yml
@@ -1788,3 +1788,14 @@ databaseChangeLog:
         - dropColumn:
             columnName: time_zone_id
             tableName: employees_ta_settings
+
+  - changeSet:
+      id: 1597734408824
+      author: haibo-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: invitation_capability_frozen_at
+                  type: datetime
+            tableName: users
