--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson</artifactId>
+      <version>3.13.3</version>
+      <type>jar</type>
+    </dependency>
+
+    <dependency>
       <groupId>io.sentry</groupId>
       <artifactId>sentry-spring</artifactId>
       <version>1.7.27</version>
@@ -305,6 +312,24 @@
       <groupId>com.google.maps</groupId>
       <artifactId>google-maps-services</artifactId>
       <version>0.14.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.vladimir-bukhtoyarov</groupId>
+      <artifactId>bucket4j-core</artifactId>
+      <version>4.10.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.vladimir-bukhtoyarov</groupId>
+      <artifactId>bucket4j-jcache</artifactId>
+      <version>4.10.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.cache</groupId>
+      <artifactId>cache-api</artifactId>
+      <version>1.1.1</version>
     </dependency>
   </dependencies>
 
