--- a/src/main/resources/db/changelog/db.changelog-0.0.1-7.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-7.yml
@@ -88,3 +88,30 @@ databaseChangeLog:
                   name: removed_at
                   type: datetime
             tableName: timesheets
+
+  - changeSet:
+      id: 1598842335588-0
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: delete from QRTZ_SIMPLE_TRIGGERS where TRIGGER_GROUP = 'ONCE_TIME_TRIGGER_GROUP';
+
+  - changeSet:
+      id: 1598842335588-1
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: delete from QRTZ_TRIGGERS where TRIGGER_GROUP = 'ONCE_TIME_TRIGGER_GROUP';
+
+  - changeSet:
+      id: 1598842335588-2
+      author: qian-eb
+      preConditions:
+        onFail: WARN
+      changes:
+        - sql:
+            sql: delete from QRTZ_JOB_DETAILS where JOB_GROUP = 'ONCE_TIME_JOB_GROUP';
