--- a/src/main/resources/db/changelog/db.tenant.changelog-master.yml
+++ b/src/main/resources/db/changelog/db.tenant.changelog-master.yml
@@ -2,9 +2,9 @@ databaseChangeLog:
   - include:
       file: db/changelog/db.changelog-0.0.1.yml
   - include:
-      file: db/changelog/db.changelog-0.0.1-2.yml
+      file: db/changelog/db.changelog-0.0.2.yml
   - include:
-      file: db/changelog/db.changelog-0.0.1-3.yml
+      file: db/changelog/db.changelog-0.0.3.yml
   # includeAll have bugs in 3.6.1, needs to upgrade to later versions to enable it to work
   # https://github.com/liquibase/liquibase/pull/698
   # https://github.com/spring-projects/spring-boot/issues/11615
