Insert and Remove Company (#1183)
* Added /insert_ot not fully done, but mostly there

* Updated to include saving subpolicies

* Small Refactor + Database migration

* Added delete endpoint

* Updated to delete from patch

* add tests

* sonar check

* update tests

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-7.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-7.yml
@@ -288,8 +288,30 @@ databaseChangeLog:
       preConditions:
         onFail: WARN
       changes:
-      - renameColumn:
+        - renameColumn:
             columnDataType: datetime
             newColumnName: updated_at
             oldColumnName: update_at
             tableName: time_off_adjustments
+
+  - changeSet:
+      id: 1598604559000-8
+      author: mshumaker
+      preConditions:
+        onFail: WARN
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: overtime_policy_id
+                  type: binary(16)
+            tableName: policy_details
+        - addForeignKeyConstraint:
+            baseColumnNames: overtime_policy_id
+            baseTableName: policy_details
+            constraintName: fk_overime_policy_details_overtime_policy_id
+            onDelete: SET NULL
+            onUpdate: CASCADE
+            referencedColumnNames: id
+            referencedTableName: overtime_policies
+
